--- a/index.html
+++ b/index.html
@@ -7,16 +7,37 @@
     <title>Lecteur Vidéo</title>
 </head>
 <body>
-    <div class="background">
-        <img src="img_mario/background.png" alt="background" class="imgBackground">
+    <div class="divBackground">
+        <img src="https://imgur.com/ho0sjnI.png" alt="background" class="background">
     </div>
-    <div class="blocs">
-        <img src="https://imgur.com/eERpRH7.png" alt="Bloc Question" class="questionBlock 01">
-        <img src="https://imgur.com/eERpRH7.png" alt="Bloc Question" class="questionBlock 02">
-        <img src="https://imgur.com/eERpRH7.png" alt="Bloc Question" class="questionBlock 03">
+    <div class="divNuages">
+        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="petitNuage 01">
+        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="petitNuage 02">
+        <img src="https://imgur.com/sJy6CFs.png" alt="nuage" class="grandNuage">
+    </div>
+    <div class="divBlocs">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 01">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 02">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 03">
         <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 01">
         <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 02">
         <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 03">
+    </div>
+    <div class="divCoins">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 01">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 02">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 03">
+    </div>
+    <div class="divTuyau">
+        <img src="https://imgur.com/fLG5iC9.png" alt="tuyau" class="tuyau">
+    </div>
+    <div class="divDrapeau">
+        <img src="https://imgur.com/hCQeClk.png" alt="poteau" class="poteau">
+        <img src="https://imgur.com/qTuJmw5.png" alt="drapeau bowser" class="drapeau bowser">
+        <img src="https://imgur.com/4S0cTde.png" alt="drapeau mario" class="drapeau mario">
+    </div>
+    <div class="divStar">
+        <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
     </div>
 </body>
 </html>
