--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="javascript" href="javascript.js">
+    <script src="javascript.js"></script>
     <title>Lecteur Vidéo</title>
 </head>
 <body>
