--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <img src="https://imgur.com/ho0sjnI.png" alt="background" class="background">
     </div>
     <div class="divNuages">
-        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="petitNuage 01">
-        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="petitNuage 02">
-        <img src="https://imgur.com/sJy6CFs.png" alt="nuage" class="grandNuage">
+        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="nuage_01">
+        <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="nuage_02">
+        <img src="https://imgur.com/sJy6CFs.png" alt="nuage" class="nuage_03">
     </div>
     <div class="divBlocs">
-        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 01">
-        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 02">
-        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock 03">
-        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 01">
-        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 02">
-        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick 03">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_01">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_02">
+        <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_03">
+        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_01">
+        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_02">
+        <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_03">
     </div>
     <div class="divCoins">
-        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 01">
-        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 02">
-        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin 03">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_01">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_02">
+        <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_03">
     </div>
     <div class="divTuyau">
         <img src="https://imgur.com/fLG5iC9.png" alt="tuyau" class="tuyau">
