--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="divTuyau">
         <img src="https://imgur.com/fLG5iC9.png" alt="tuyau" class="tuyau">
     </div>
-    <div class="divDrapeau">
+    <div class="divPoteau">
         <img src="https://imgur.com/hCQeClk.png" alt="poteau" class="poteau">
+    </div>
+    <div class="divDrapeaux">
         <img src="https://imgur.com/qTuJmw5.png" alt="drapeau bowser" class="drapeau bowser">
         <img src="https://imgur.com/4S0cTde.png" alt="drapeau mario" class="drapeau mario">
     </div>
