--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="divStar">
             <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
         </div>
+        <div class="divVideo">
+            <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video"></video>
+        </div>
     </div>
 </body>
 <script src="javascript.js"></script>
