--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <div class="wrapper">
         <div class="divBackground">
             <img src="https://imgur.com/ho0sjnI.png" alt="background" class="background">
-            <div class="divVideo">
-                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" autoplay muted loop></video>
-            </div>
             <div class="divNuages">
                 <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="nuage_01">
                 <img src="https://imgur.com/zpHZJ5Q.png" alt="nuage" class="nuage_02">
@@ -21,13 +18,13 @@
             </div>
             <div class="divBlocs">
                 <div class="etage1">
-                    <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_01">
+                    <img src="https://imgur.com/3OAnFiS.png" alt="bloc question" class="questionBlock_01">
                 </div>
                 <div class="etage2">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_01">
-                    <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_02">
+                    <img src="https://imgur.com/H4GywUm.png" alt="bloc question" class="questionBlock_02">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_02">
-                    <img src="https://imgur.com/eERpRH7.png" alt="bloc question" class="questionBlock_03">
+                    <img src="https://imgur.com/Us8Tqmc.png" alt="bloc question" class="questionBlock_03">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_03">
                 </div>
             </div>
@@ -48,6 +45,9 @@
             </div>
             <div class="divStar">
                 <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
+            </div>
+            <div class="divVideo">
+                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" autoplay muted loop></video>
             </div>
         </div>
     </div>
