--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </div>
             <div class="divBlocs">
                 <div class="etage1">
-                    <img src="https://imgur.com/3OAnFiS.png" alt="bloc question" class="questionBlock_01">
+                    <img src="https://imgur.com/3OAnFiS.png" alt="bloc question" class="stop_block">
                 </div>
                 <div class="etage2">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_01">
-                    <img src="https://imgur.com/H4GywUm.png" alt="bloc question" class="questionBlock_02">
+                    <img src="https://imgur.com/H4GywUm.png" alt="bloc question" class="play_block">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_02">
-                    <img src="https://imgur.com/Us8Tqmc.png" alt="bloc question" class="questionBlock_03">
+                    <img src="https://imgur.com/Us8Tqmc.png" alt="bloc question" class="pause_block">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_03">
                 </div>
             </div>
