--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_01">
                     <img src="https://imgur.com/H4GywUm.png" alt="bloc question" class="play_block">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_02">
-                    <img src="https://imgur.com/Us8Tqmc.png" alt="bloc question" class="pause_block">
+                    <img src="https://imgur.com/C1zPEYA.png" alt="bloc question" class="pause_block">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_03">
                 </div>
             </div>
             <div class="divCoins">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_01">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_02">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_03">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
             </div>
             <div class="divTuyau">
                 <img src="https://imgur.com/fLG5iC9.png" alt="tuyau" class="tuyau">
@@ -47,7 +47,7 @@
                 <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
             </div>
             <div class="divVideo">
-                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" autoplay muted loop></video>
+                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" loop></video>
             </div>
         </div>
     </div>
