--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="divBlocs">
                 <div class="etage1">
-                    <img src="https://imgur.com/3OAnFiS.png" alt="bloc question" class="stop_block">
+                    <img src="https://imgur.com/C1zPEYA.png" alt="bloc question" class="stop_block">
                 </div>
                 <div class="etage2">
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_01">
@@ -29,9 +29,9 @@
                 </div>
             </div>
             <div class="divCoins">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
-                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_01">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_02">
+                <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_03">
             </div>
             <div class="divTuyau">
                 <img src="https://imgur.com/fLG5iC9.png" alt="tuyau" class="tuyau">
