--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             </div>
             <div class="divVideo">
                 <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" loop></video>
+                <div class="divBarreProgression">
+                    <div class="barreProgression">
+                        <div class="progression"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
