--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <img src="https://imgur.com/G8GOW8h.png" alt="brick" class="brick_03">
                 </div>
             </div>
+            <div class="divStar">
+                <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
+            </div>
             <div class="divCoins">
                 <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_01">
                 <img src="https://imgur.com/iErDbfC.png" alt="coin" class="coin_02">
@@ -43,11 +46,8 @@
                 <img src="https://imgur.com/qTuJmw5.png" alt="drapeau bowser" class="drapeau bowser">
                 <img src="https://imgur.com/4S0cTde.png" alt="drapeau mario" class="drapeau mario">
             </div>
-            <div class="divStar">
-                <img src="https://imgur.com/qfHOb37.png" alt="star" class="star">
-            </div>
             <div class="divVideo">
-                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video" loop></video>
+                <video src="https://www.w3schools.com/html/mov_bbb.mp4" class="video"></video>
                 <div class="divBarreProgression">
                     <div class="barreProgression">
                         <div class="progression"></div>
