--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
             <div class="divPoteau">
                 <img src="https://imgur.com/hCQeClk.png" alt="poteau" class="poteau">
+                <input type="range" name="slider" class="sliderVolume" min="0" max="100" value="100">
             </div>
             <div class="divDrapeaux">
                 <img src="https://imgur.com/qTuJmw5.png" alt="drapeau bowser" class="drapeau bowser">
